--- a/index.html
+++ b/index.html
@@ -53,16 +53,22 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<span class="image main"><img src="images/catsvsdogs.jpg" alt="" /></span>
+								<p><h2>Dogs vs Cats Redux</h2>An algorithm to classify whether images contain either a dog or a cat. This is easy for humans, dogs, and cats. Your computer will find it a bit more difficult. Check out my project, <a href="https://github.com/narc-kany/Cats-vs-Dogs" target="_blank" rel="noopener noreferrer">Dogs vs Cat </a>.</p>
+								<span class="image main"><img src="images/tomato01.jpg" alt="" /></span>
+								<p><h2>Tomato Disease Prediction</h2>Tomato is one of the most essential and consumable crops in the world. Tomatoes differ in quantity depending on how they are fertilized. Leaf disease is the primary factor impacting the amount and quality of crop yield. The Convolutional Neural Network (CNN) is used to effectively define and classify tomato diseases. Check out my project, <a href="https://github.com/narc-kany/Vegetable-disease-prediction-using-Computer-vision/tree/main/tomato_disease/tomato_training.ipynb" target="_blank" rel="noopener noreferrer">Tomato Disease Prediction</a>.</p>
+								<span class="image main"><img src="images/potato01.jpg" alt="" /></span>
+								<p><h2>Potato Disease Prediction</h2>Farmers who grow potatoes suffer from serious financial standpoint losses each year which cause several diseases that affect potato plants. The diseases Early Blight and Late Blight are the most frequent.
+									Early blight is caused by fungus and late blight is caused by specific micro organisms and if farmers detect this disease early and apply appropriate treatment then it can save a lot of waste and prevent economical loss. The Convolutional Neural Network (CNN) is used to effectively define and classify potato diseases. Check out my project, <a href="https://github.com/narc-kany/Vegetable-disease-prediction-using-Computer-vision/blob/main/potato_disease/potato_training.ipynb" target="_blank" rel="noopener noreferrer">Tomato Disease Prediction</a>.</p>
+								<span class="image main"><img src="images/nlp01.jpg" alt="" /></span>
+								<p><h2>Chat bot Cornell Moviedialog Corpus</h2>Naturally, frequency is considered first. But what about those phrases that are similar in meaning? For example, should thank you so much and thxbe treated independently? We don't think so. We want to group them and save our slots. How? We make use of a parallel corpus. Both thank you so much and thx are likely to be translated into the same text. Based on this assumption, we construct English synonym groups that share the same translation. Check out my project, <a href="https://www.kaggle.com/code/narckany/chat-bot-cornell-moviedialog-corpus/" target="_blank" rel="noopener noreferrer">Chat bot Cornell Moviedialog Corpus</a>.</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<span class="image main"><img src="images/pic033.jpg" alt="" /></span>
+								<p> Machine Learning Engineer with 5 years experience in Computer Vision, Natural Language Processing, AI softwares. Proficient in machine learning and operationalization; adept at solving complex problems through data.</p>
 							</article>
 
 						<!-- Contact -->
@@ -89,10 +95,10 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.instagram.com/quantum_tachyon/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/narc-kany" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://dev.to/narckany" class="icon brands fa-dev"><span class="label">DEV</span></a></li>
+									<li><a href="https://www.kaggle.com/narckany" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
 								</ul>
 							</article>
 
