--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Sivanesh S</h1>
-								<p>Machine Learning Engineer with 5 years experience in Computer Vision,<br> Natural Language Processing, AI softwares.</p>
+								<p>Machine Learning Engineer with 6 years experience in GenAI, Computer Vision,<br> Natural Language Processing, AI softwares.</p>
 								<p>Proficient in machine learning and operationalization; <br>adept at solving complex problems through data.</p>
 							</div>
 						</div>
@@ -53,6 +53,12 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
+								<span class="image main"><img src="images/phising.jpg" alt="" /></span>
+								<p><h2>Building a Phishing Detection Model</h2>Phishing attacks continue to be a prevalent threat to individuals and organizations, leading to compromised accounts, stolen sensitive information, and financial losses. Building an effective phishing detection model is crucial to mitigate these risks. This repository contains the code and resources to develop a phishing detection model using machine learning techniques. Check out my project, <a href="https://github.com/narc-kany/Building-a-Phishing-Detection-Model" target="_blank" rel="noopener noreferrer">Building a Phishing Detection Model</a>.</p>
+								<span class="image main"><img src="images/sars_cov.jpg" alt="" /></span>
+								<p><h2>SARS-Genome</h2>SARS-Genome ML Project! This study aims to examine and comprehend the genome sequencing of Severe Acute Respiratory Syndrome (SARS) viruses using machine learning techniques. This README file offers a description of the project, its goals, and how to efficiently use the offered code and resources.	Check out my project, <a href="https://github.com/narc-kany/SARS-Genome" target="_blank" rel="noopener noreferrer">SARS-Genome</a>.</p>
+								<span class="image main"><img src="images/breast.jpg" alt="" /></span>
+								<p><h2>Breast Cancer Detection using Breast Histopathology Images and CBIS DDSM Breast</h2>Breast cancer is the most common form of cancer in women, and invasive ductal carcinoma (IDC) is the most common form of breast cancer. This project depends on two datasets: The first Dataset is cbis-ddsm-breast-cancer-image-dataset from. the second Dataset is breast-histopathology-images. Its been said to have 0.96 efficiency. Breast Cancer Detection using Breast Histopathology Images and CBIS DDSM Breast. Cancer Image Datase. Check out my project, <a href="https://github.com/narc-kany/Breast-Cancer-Detection-using-Breast-Histopathology-Images-and-CBIS-DDSM-Breast-Cancer-Image-Datase" target="_blank" rel="noopener noreferrer">Breast Cancer Detection using Breast Histopathology Images and CBIS DDSM Breast Cancer Image Datase</a>.</p>
 								<span class="image main"><img src="images/catsvsdogs.jpg" alt="" /></span>
 								<p><h2>Dogs vs Cats Redux</h2>An algorithm to classify whether images contain either a dog or a cat. This is easy for humans, dogs, and cats. Your computer will find it a bit more difficult. Check out my project, <a href="https://github.com/narc-kany/Cats-vs-Dogs" target="_blank" rel="noopener noreferrer">Dogs vs Cat </a>.</p>
 								<span class="image main"><img src="images/tomato01.jpg" alt="" /></span>
